--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Dog Gallery</title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
     <style>
@@ -14,7 +14,7 @@
     <h1>PACKPUPPIES</h1>
     <div id="gallery"></div>
     </div>
-    <script src="index.js"></script>
+    <script src="./index.js"></script>
     <style>
       p {
         text-align: center;
